--- a/render.yaml
+++ b/render.yaml
@@ -18,15 +18,17 @@ services:
         value: b76d27da2a4220fe109fe9ef0e866530
         sync: true
       - key: WEBHOOK
-        synv: false 
+        value: true
+        sync: true
       - key: FORCE_SUB 
-        sync: false
+        value: https://t.me/xadmin_bots
+        sync: true
       - key: DB_NAME
         value: musicdb
         sync: true
       - key: DB_URL 
         value: mongodb+srv://kfakeid9:Jobijobi1@musicdb.urlvere.mongodb.net/?retryWrites=true&w=majority
-        sync: true 
+        sync: true
       - key: START_PIC
         value: https://telegra.ph/file/aa1faf8dafa22f4a9ce48.jpg
         sync: true
